--- a/src/app/components/membresia-user/membresia-user.component.html
+++ b/src/app/components/membresia-user/membresia-user.component.html
@@ -12,25 +12,27 @@
       </ul>
     </nav>
 </header>
-<section class="section__titulo">
-    <h1 class="section__titulo-titulo">SELECCIONA TU MEMBRESIA</h1>
-    <p class="section__titulo-subtitulo">A la hora de abonar, asegurate que tu paypal sea la misma que tu registro</p>
-</section>
-<section class="section__membresia">
-    <div class="container__membresia" *ngFor="let plan of cardMembresiaList">
-        <div class="container__membresia-card" >
-            <h2 class="container__membresia-card-titulo">{{plan.titulo}}</h2>
-            <ul class="container__membresia-card-items">
-                <li class="container__membresia-card-items-item">{{plan.precio}}</li>
-                <li class="container__membresia-card-items-item">{{plan.tipoPlan}}</li>
-                <ng-container *ngFor="let serviceItem of plan.servicios">
-                    <li class="container__membresia-card-items-item">{{serviceItem}}</li>
-                </ng-container>
-            </ul>
-            <button class="container__membresia-card-button">ADQUIRIR</button>
+<div class="section__main">
+    <section class="section__titulo">
+        <h1 class="section__titulo-titulo">SELECCIONA TU MEMBRESIA</h1>
+        <p class="section__titulo-subtitulo">A la hora de abonar, asegurate que tu paypal sea la misma que tu registro</p>
+    </section>
+    <section class="section__membresia">
+        <div class="container__membresia" *ngFor="let plan of cardMembresiaList">
+            <div class="container__membresia-card" >
+                <h2 class="container__membresia-card-titulo">{{plan.titulo}}</h2>
+                <ul class="container__membresia-card-items">
+                    <li class="container__membresia-card-items-item">{{plan.precio}}</li>
+                    <li class="container__membresia-card-items-item">{{plan.tipoPlan}}</li>
+                    <ng-container *ngFor="let serviceItem of plan.servicios">
+                        <li class="container__membresia-card-items-item">{{serviceItem}}</li>
+                    </ng-container>
+                </ul>
+                <button class="container__membresia-card-button">ADQUIRIR</button>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
 <section>
     <app-footer></app-footer>
 </section>
